tests/int/list_command/snapshots/integration__int__list_command__test_targets__should_error_for_test_module_without_include_tests_flag_fixture.snap
---
source: tests/int/list_command/test_targets.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - helpers
---
success: false
exit_code: 1
----- stdout -----

----- stderr -----
Error: Module 'helpers' not found
