tests/int/list_command/snapshots/integration__int__list_command__test_targets__should_list_common_test_module_for_own_crate.snap
---
source: tests/int/list_command/test_targets.rs
info:
  program: crawk
  args:
    - list
    - common
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
common

----- stderr -----
