tests/int/list_command/snapshots/integration__int__list_command__test_targets__should_list_nested_test_module_subtree_for_own_crate.snap
---
source: tests/int/list_command/test_targets.rs
info:
  program: crawk
  args:
    - list
    - "int::list_command"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
int::list_command
int::list_command::basic
int::list_command::bin_only
int::list_command::error_cases
int::list_command::filter
int::list_command::flags
int::list_command::multi_target
int::list_command::overview
int::list_command::test_targets

----- stderr -----
