tests/int/list_command/snapshots/integration__int__list_command__test_targets__should_list_test_module_subtree_for_fixture.snap
---
source: tests/int/list_command/test_targets.rs
info:
  program: crawk
  args:
    - "-p"
    - fixtures/modules
    - list
    - helpers
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
helpers

----- stderr -----
