tests/int/list_command/snapshots/integration__int__list_command__test_targets__should_list_test_module_subtree_for_own_crate.snap
---
source: tests/int/list_command/test_targets.rs
info:
  program: crawk
  args:
    - list
    - int
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
int
int::check_command
int::check_command::basic
int::check_command::config
int::check_command::cycles
int::check_command::deny
int::check_command::error_cases
int::check_command::exit_codes
int::check_command::init
int::check_command::layers
int::check_command::overview
int::check_command::restrict
int::command
int::deps_command
int::deps_command::basic
int::deps_command::bin_only
int::deps_command::cycles
int::deps_command::depth
int::deps_command::error_cases
int::deps_command::format
int::deps_command::orphans
int::deps_command::overview
int::deps_command::paths
int::error_cases
int::list_command
int::list_command::basic
int::list_command::bin_only
int::list_command::error_cases
int::list_command::filter
int::list_command::flags
int::list_command::multi_target
int::list_command::overview
int::list_command::test_targets
int::use_command
int::use_command::basic_output
int::use_command::bin_only
int::use_command::binaries
int::use_command::custom_path
int::use_command::depth
int::use_command::edge_cases
int::use_command::empty_and_glob
int::use_command::error_cases
int::use_command::flags
int::use_command::include_tests
int::use_command::inline
int::use_command::nesting
int::use_command::overview
int::use_command::own_modules
int::use_command::test_targets
int::use_command::visibility
int::use_command::visibility::inner_glob
int::use_command::visibility::package_name_glob
int::use_command::visibility::restricted
int::verbosity
int::version
int::why_command
int::why_command::basic
int::why_command::bin_only
int::why_command::error_cases
int::why_command::flags
int::why_command::overview

----- stderr -----
