tests/int/list_command/snapshots/integration__int__list_command__test_targets__should_list_test_module_subtree_with_depth.snap
---
source: tests/int/list_command/test_targets.rs
info:
  program: crawk
  args:
    - list
    - int
    - "-t"
    - "-d"
    - "2"
---
success: true
exit_code: 0
----- stdout -----
int
int::check_command
int::command
int::deps_command
int::error_cases
int::list_command
int::use_command
int::verbosity
int::version
int::why_command

----- stderr -----
