tests/int/list_command/snapshots/integration__int__list_command__test_targets__should_list_test_module_subtree_with_source.snap
---
source: tests/int/list_command/test_targets.rs
info:
  program: crawk
  args:
    - "-p"
    - /home/barcie/coding/crawk/fixtures/modules
    - list
    - helpers
    - "-t"
    - "-s"
---
success: true
exit_code: 0
----- stdout -----
helpers  tests/helpers.rs

----- stderr -----
